[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ticket-routing-env"
version = "1.0.0"
description = "OpenEnv-compatible ticket routing environment for AI agent training"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Shreyan Cheekoti", email = "shreyan1567@gmail.com"}
]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.6",
    "pydantic>=2.9.2",
    "openai>=1.51.2",
    "httpx>=0.27.2",
    "python-multipart>=0.0.12",
    "PyYAML>=6.0.2",
]

[project.urls]
Homepage = "https://huggingface.co/spaces/Shreyan1567/ticket-routing-env"
Repository = "https://github.com/Shreyan1566/ticket-routing-env"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
"*" = ["openenv.yaml", "*.md"]
